# sentinel-core-mvp

./: .dockerignore  .env.example  .env.production  .gitignore  AGENTS.md  DEPLOY-QUICK.md  Dockerfile  README.md  debug_cpg.py  main.py  next.config.mjs  openapi.json  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  sandbox_demo.py  start-dev.ps1  test_clean_code.py  test_e2e_diagnostic.py  test_pipeline.py  test_sse_clean.py  test_sse_proxy.py  test_sse_stream.py  test_state_keys.py  vercel.json
..bfg-report/2026-04-27/15-57-11/: cache-stats.txt  object-id-map.old-new.txt
api/: __init__.py  index.py  main.py  models.py  ping.py  pipeline.py
api/routes/: analyze.py  demo.py  health.py
docker/: test-locally.sh
docs/: DEPLOYMENT.md  SANDBOX.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/lib/: api.ts
src/app/: layout.tsx
src/components/analyze/: AnalyzeToolbar.tsx  EditorPanel.tsx  ResultsPanel.tsx
src/components/landing/: Architecture.tsx  HowItWorks.tsx  MetricsStrip.tsx  Navbar.tsx  Pricing.tsx
src/components/ui/: CustomCursor.tsx
src/lib/: api.ts  store.ts
src/sentinel_core/: __init__.py  config.py
src/sentinel_core/agents/: __init__.py  base.py  graph.py  nodes.py  state.py
src/sentinel_core/gnn/: __init__.py  graph_builder.py  models.py
src/sentinel_core/llm/: __init__.py  config.py
src/sentinel_core/parsing/: __init__.py  models.py  parser.py
src/sentinel_core/patching/: __init__.py  llm_planner.py  models.py  patch_generator.py
src/sentinel_core/sandbox/: __init__.py  executor.py
src/sentinel_core/utils/: __init__.py  logging.py
src/types/: sentinel.ts
tests/: conftest.py  test_graph_builder.py  test_parsing.py  test_patching_v3.py  test_sandbox.py
(+10 files in other folders)
